--- a/templates/error.html
+++ b/templates/error.html
@@ -4,7 +4,7 @@
 	<div class="row">
 		<div class="col alert alert-danger">
 			<p class="text-bold">ERROR</p>
-			<p>{{error_status}}: {{error_message}}</p>
+			<p>{{status_code}}: {{error_message}}</p>
 		</div>
 	</div>
 {% endblock %}
