Display date added

--- a/templates/portfolio_category.html
+++ b/templates/portfolio_category.html
@@ -15,7 +15,7 @@
 			<div class="card">
 				<img class="portfolio-image" src="/static/portfolio_images{{item.image.url}}" />
 				<p>{{item.title}}</p>
-				<p>Created: {{item.date_created}}</p>
+				<p>Created: {{item.display_date}}</p>
 			</div>
 		</div>
 		{% endfor %}
