Some better styling & layout

--- a/static/_app.scss
+++ b/static/_app.scss
@@ -12,7 +12,12 @@ a {
     background-color: #ffd6fc!important;
 }
 
-img.portfolio-image {
-	padding: 10px;
+.jumbotron {
+	padding: 1rem;
+	background-color: #d4f2ff;
+}
+
+.body {
+	padding: 25px 0px;
 }
 
