--- a/static/app.css
+++ b/static/app.css
@@ -10,8 +10,13 @@ a {
   background-color: #ffd6fc !important;
 }
 
-img.portfolio-image {
-  padding: 10px;
+.jumbotron {
+  padding: 1rem;
+  background-color: #d4f2ff;
+}
+
+.body {
+  padding: 25px 0px;
 }
 
 /*# sourceMappingURL=app.css.map */
