--- a/templates/portfolio_category.html
+++ b/templates/portfolio_category.html
@@ -2,20 +2,22 @@
 {% load static %}
 
 {% block page_content %}
-<div class="row">
-	<div class="col"><h1>{{category.title}}</h1></div>
-</div>
-<div class="row">
-	<div class="col">{{category.description|safe}}</div>
+<div class="jumbotron">
+	<h1 class="display-4">{{category.title}}</h1>
+	<hr class="my-4">
+	<p class="lead">{{category.description|safe}}</p>
 </div>
 <div class="row">
 	{% if category.portfolioitem_set.count > 0 %}
 		{% for item in category.portfolioitem_set.all %}
-		<div class="col-3">
+		<div class="col-4">
 			<div class="card">
-				<img class="portfolio-image" src="/static/portfolio_images{{item.image.url}}" />
-				<p>{{item.title}}</p>
-				<p>Created: {{item.display_date}}</p>
+				<img class="card-img-top portfolio-image" src="/static/portfolio_images{{item.image.url}}" />
+				<div class="card-body">
+					<h5 class="card-title">{{item.title}}</h5>
+					<h6 class="card-subtitle mb-2 text-muted">Created: {{item.display_date}}</h6>
+					<p class="card-text">{{item.description|safe}}</p>
+				</div>
 			</div>
 		</div>
 		{% endfor %}
