--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,7 +11,8 @@
             <div class="g-recaptcha" data-sitekey="{{site_key}}"></div>
             {% endif %}
             <p>
-                <input type="submit" class="btn btn-primary form-control" value="submit" /></p>
+                <input type="submit" class="btn btn-primary form-control" value="submit" />
+            </p>
         </form>
     </div>
     <div class="col-2"></div>
