Finish contact page logic, make homepage content

--- a/static/_app.scss
+++ b/static/_app.scss
@@ -21,3 +21,12 @@ a {
 	padding: 25px 0px;
 }
 
+ul.errorlist {
+	list-style-type: none;
+    padding-left: 0;
+    li {
+    	color: #e22525;
+    	font-weight: bold;
+    }
+}
+
