--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container">
-			  <a class="navbar-brand" href="">
+			  <a class="navbar-brand" href="{% url 'home' %}">
 			  	<img class="navbar-logo" src="{% static 'images/bobuilt-logo.png' %}" alt="Bo built" />
 			  </a>
 				<div>
@@ -54,6 +54,7 @@
 	{% endif %}
 			{% if messages %}
 			<div class="row">
+				<div class="col-2"></div>
 				<div class="col">
 					{% for message in messages %}
 					{% if message.tags == 'error' %}
@@ -65,6 +66,7 @@
 					</div>
 					{% endfor %}
 				</div>
+				<div class="col-2"></div>
 			</div>
 			{% endif %}
 			{% block page_content %}{% endblock %}
@@ -78,10 +80,10 @@
 					Bobuilt.me © 2021 Copyright 
 			</div>
 			<div class="col-lg-8 col-sm-12">
-				<a href="">About</a> |
+				<a href="{% url 'home' %}">About</a> |
 				<a href="{% url 'privacy_policy' %}">Privacy Policy</a> |
 				<a href="{% url 'eula' %}">End User License Agreement</a> |
-				<a href="">Contact</a>
+				<a href="{% url 'contact' %}">Contact</a>
 			</div>
 		</div>
 	</nav>
