--- a/templates/base.html
+++ b/templates/base.html
@@ -77,10 +77,10 @@
 	<nav class="navbar navbar-light bg-light">
 		<div class="container">
 			<div class="col-lg-4 col-sm-12">
-					Bobuilt.me © 2021 Copyright 
+					bobuilt.me © 2021 Copyright 
 			</div>
 			<div class="col-lg-8 col-sm-12">
-				<a href="{% url 'home' %}">About</a> |
+				<a href="{% url 'home' %}">Home</a> |
 				<a href="{% url 'privacy_policy' %}">Privacy Policy</a> |
 				<a href="{% url 'eula' %}">End User License Agreement</a> |
 				<a href="{% url 'contact' %}">Contact</a>
