--- a/templates/portfolio_category.html
+++ b/templates/portfolio_category.html
@@ -18,7 +18,7 @@
 		{% for item in category.portfolioitem_set.all %}
 		<div class="col-4">
 			<div class="card">
-				<img class="card-img-top portfolio-image" src="/static/portfolio_images{{item.image.url}}" />
+				<img class="card-img-top portfolio-image" src="/static/portfolio_images/{{item.gallery.thumbnail}}" />
 				<div class="card-body">
 					<h5 class="card-title">{{item.title}}</h5>
 					<h6 class="card-subtitle mb-2 text-muted">Created: {{item.display_date}}</h6>
