--- a/templates/portfolio_category.html
+++ b/templates/portfolio_category.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static helper_tags %}
 
 {% block page_content %}
 
@@ -18,7 +18,48 @@
 		{% for item in category.portfolioitem_set.all %}
 		<div class="col-4">
 			<div class="card">
-				<img class="card-img-top portfolio-image" src="{{item.gallery.thumbnail.url}}" />
+				{% with item.gallery.images as images %}
+
+				{% with item.gallery.images.count as image_count %}
+				{% if image_count > 1 %}
+					<div id="carousel_{{item.pk}}" class="carousel slide" data-ride="carousel" data-interval="false">
+						<ol class="carousel-indicators">
+
+						  	{% for image in images %}
+						  	{% if forloop.first %}
+						      <li data-target="#{{item.pk}}-{{image.pk}}" data-slide-to="{{forloop.counter}}" class="active"></li>
+						      {% else %}
+						      <li data-target="#{{item.pk}}-{{image.pk}}" data-slide-to="{{forloop.counter}}"></li>
+						      {% endif %}
+						     {% endfor %}
+						    </ol>
+						  <div class="carousel-inner">
+						  	{% for image in images %}
+						  	{% if forloop.first %}
+						    <div class="carousel-item active" id="{{item.pk}}-{{image.pk}}">
+						      <img class="d-block w-100" src="{{image.image.url}}" alt="slide {{forloop.counter}}">
+						    </div>
+						    {% else %}
+						    <div class="carousel-item">
+						      <img class="d-block w-100" src="{{image.image.url}}" alt="slide {{forloop.counter}}" id="{{item.pk}}-{{image.pk}}">
+						    </div>
+						    {% endif %}
+						    {% endfor %}
+						  </div>
+						  <a class="carousel-control-prev" href="#carousel_{{item.pk}}" role="button" data-slide="prev">
+						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Previous</span>
+						  </a>
+						  <a class="carousel-control-next" href="#carousel_{{item.pk}}" role="button" data-slide="next">
+						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Next</span>
+						  </a>
+						</div>
+					{% else %}
+						<img class="card-img-top" src="{{images.first.image.url}}" alt="Card image cap">
+					{% endif %}
+				{% endwith %}
+				{% endwith %}
 				<div class="card-body">
 					<h5 class="card-title">{{item.title}}</h5>
 					<h6 class="card-subtitle mb-2 text-muted">Created: {{item.display_date}}</h6>
@@ -41,4 +82,7 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+	$('.carousel').carousel();
+</script>
 {% endblock %}
