--- a/templates/portfolio_category.html
+++ b/templates/portfolio_category.html
@@ -37,19 +37,30 @@
 						  	{% for image in images %}
 						  	{% if forloop.first %}
 						    <div class="carousel-item active" id="{{item.pk}}-{{image.pk}}">
-						    {% else %}
-						    <div class="carousel-item">
-						    {% endif %}
 						      <img class="d-block w-100" src="{{image.image.url}}" alt="{{image.alt}}">
+
 							    {% if image.description %}
 							    <div class="carousel-caption d-none d-md-block">
 								    <p>{{image.description}}</p>
 								 </div>
 								 {% endif %}
 						    </div>
+						    {% else %}
+						    <div class="carousel-item">
 						      <img class="d-block w-100" src="{{image.image.url}}" alt="{{image.alt}}" id="{{item.pk}}-{{image.pk}}">
+						      
+							    {% if image.description %}
+							    <div class="carousel-caption d-none d-md-block">
+								    <p>{{image.description}}</p>
+								 </div>
+								 {% endif %}
 						    </div>
 						    {% endif %}
+						    {% if image.description %}
+						    <div class="carousel-caption d-none d-md-block">
+							    <p>{{image.description}}</p>
+							 </div>
+							 {% endif %}
 
 						    {% endfor %}
 						  </div>
