Small HTML fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta charset="utf-8">
 		<meta name="description" content="Bo Morin is a queer, transmasculine hobby woodworker and builder located in Hyattsville, Maryland. Check out their work on this portfolio page and contact them for commissions.">
-		<meta name="keywords" content="hobby woodwork portfolio, hobby woodworking, hobby construction, handyman hyattsville, queer woodworker, lgbtq+ woodworker, trans woodworker">		
+		<meta name="keywords" content="hobby woodwork portfolio, hobby woodworking, hobby construction, artist hyattsville, handyman hyattsville, queer woodworker, lgbtq+ woodworker, trans woodworker">		
 		<meta name="author" content="Bo Morin">
 		
 		{% comment %}
