--- a/templates/portfolio_category.html
+++ b/templates/portfolio_category.html
@@ -15,28 +15,26 @@
 </div>
 <div class="row">
 	{% if category.portfolioitem_set.count > 0 %}
-		{% for item in category.gallery_set.all %}
+		{% for gallery in category.gallery_set.all %}
 		<div class="col-4">
 			<div class="card">
-				{% with gallery.images as images %}
-
-				{% with gallery.images.count as image_count %}
-				{% if image_count > 1 %}
-					<div id="carousel_{{item.pk}}" class="carousel slide" data-ride="carousel" data-interval="false">
+				{% if gallery.galleryimage_set.count > 1 %}
+					{% with gallery.galleryimage_set.all as images %}
+					<div id="carousel_{{gallery.pk}}" class="carousel slide" data-ride="carousel" data-interval="false">
 						<ol class="carousel-indicators">
 
 						  	{% for image in images %}
 						  	{% if forloop.first %}
-						      <li data-target="#{{item.pk}}-{{image.pk}}" data-slide-to="{{forloop.counter}}" class="active"></li>
+						      <li data-target="#{{gallery.pk}}-{{image.pk}}" data-slide-to="{{forloop.counter}}" class="active"></li>
 						      {% else %}
-						      <li data-target="#{{item.pk}}-{{image.pk}}" data-slide-to="{{forloop.counter}}"></li>
+						      <li data-target="#{{gallery.pk}}-{{image.pk}}" data-slide-to="{{forloop.counter}}"></li>
 						      {% endif %}
 						     {% endfor %}
 						    </ol>
 						  <div class="carousel-inner">
 						  	{% for image in images %}
 						  	{% if forloop.first %}
-						    <div class="carousel-item active" id="{{item.pk}}-{{image.pk}}">
+						    <div class="carousel-item active" id="{{gallery.pk}}-{{image.pk}}">
 						      <img class="d-block w-100" src="{{image.image.url}}" alt="{{image.alt}}">
 
 							    {% if image.description %}
@@ -47,7 +45,7 @@
 						    </div>
 						    {% else %}
 						    <div class="carousel-item">
-						      <img class="d-block w-100" src="{{image.image.url}}" alt="{{image.alt}}" id="{{item.pk}}-{{image.pk}}">
+						      <img class="d-block w-100" src="{{image.image.url}}" alt="{{image.alt}}" id="{{gallery.pk}}-{{image.pk}}">
 
 							    {% if image.description %}
 							    <div class="carousel-caption d-none d-md-block">
@@ -59,24 +57,25 @@
 
 						    {% endfor %}
 						  </div>
-						  <a class="carousel-control-prev" href="#carousel_{{item.pk}}" role="button" data-slide="prev">
+						  <a class="carousel-control-prev" href="#carousel_{{gallery.pk}}" role="button" data-slide="prev">
 						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 						    <span class="sr-only">Previous</span>
 						  </a>
-						  <a class="carousel-control-next" href="#carousel_{{item.pk}}" role="button" data-slide="next">
+						  <a class="carousel-control-next" href="#carousel_{{gallery.pk}}" role="button" data-slide="next">
 						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
 						    <span class="sr-only">Next</span>
 						  </a>
 						</div>
+						{% endwith %}
 					{% else %}
-						<img class="card-img-top" src="{{images.first.image.url}}" alt="{{images.first.alt}}">
+						{% with gallery.galleryimage_set.first as image %}
+						<img class="card-img-top" src="{{image.image.url}}" alt="{{image.alt}}">
+						{% endwith %}
 					{% endif %}
-				{% endwith %}
-				{% endwith %}
 				<div class="card-body">
-					<h5 class="card-title">{{item.title}}</h5>
-					<h6 class="card-subtitle mb-2 text-muted">Created: {{item.display_date}}</h6>
-					<p class="card-text">{{item.description|safe}}</p>
+					<h5 class="card-title">{{gallery.title}}</h5>
+					<h6 class="card-subtitle mb-2 text-muted">Created: {{gallery.display_date}}</h6>
+					<p class="card-text">{{gallery.description|safe}}</p>
 				</div>
 			</div>
 		</div>
