Remove portfolio item refernece in template and change url

--- a/templates/portfolio_category.html
+++ b/templates/portfolio_category.html
@@ -14,7 +14,7 @@
 	</div>
 </div>
 <div class="row">
-	{% if category.portfolioitem_set.count > 0 %}
+	{% if category.gallery_set.count > 0 %}
 		{% for gallery in category.gallery_set.all %}
 		<div class="col-4">
 			<div class="card">
