--- a/templates/portfolio_category.html
+++ b/templates/portfolio_category.html
@@ -16,7 +16,11 @@
 <div class="row">
 	{% if category.gallery_set.count > 0 %}
 		{% for gallery in category.gallery_set.all %}
-		<div class="col-4">
+		{% if gallery.has_video %}
+		<div class="col-sm-12 col-md-6">
+		{% else %}
+		<div class="col-sm-12 col-md-4">
+		{% endif %}
 			<div class="card">
 				{% if gallery.galleryimage_set.count > 1 %}
 					{% with gallery.galleryimage_set.all as images %}
@@ -35,8 +39,8 @@
 						  	{% for image in images %}
 						  	{% if forloop.first %}
 						    <div class="carousel-item active" id="{{gallery.pk}}-{{image.pk}}">
-						    {% if image.video %}
-						    	{{image.video|safe}}
+						    {% if image.youtubeid %}
+						    	{{image.youtubeid|youtube_player}}
 						    {% else %}
 						      <img class="d-block w-100" src="{{image.image.url}}" alt="{{image.alt}}">
 						     {% endif %}
@@ -48,7 +52,11 @@
 						    </div>
 						    {% else %}
 						    <div class="carousel-item">
-						      <img class="d-block w-100" src="{{image.image.url}}" alt="{{image.alt}}" id="{{gallery.pk}}-{{image.pk}}">
+						      {% if image.youtubeid %}
+							    	{{image.youtubeid|youtube_player}}
+							    {% else %}
+							      <img class="d-block w-100" src="{{image.image.url}}" alt="{{image.alt}}">
+							     {% endif %}
 
 							    {% if image.description %}
 							    <div class="carousel-caption d-none d-md-block">
@@ -72,8 +80,8 @@
 						{% endwith %}
 					{% else %}
 						{% with gallery.galleryimage_set.first as image %}
-						{% if image.video %}
-						    {{image.video|safe}}
+						{% if image.youtubeid %}
+						    {{image.youtubeid|youtube_player}}
 						{% else %}
 							<img class="card-img-top" src="{{image.image.url}}" alt="{{image.alt}}">
 						{% endif %}
