--- a/static/app.css
+++ b/static/app.css
@@ -33,4 +33,10 @@ ul.errorlist li {
   border-color: #096890;
 }
 
+.spacer {
+  display: block;
+  width: 100%;
+  height: 1rem;
+}
+
 /*# sourceMappingURL=app.css.map */
