Adjust slide caption style

--- a/static/_app.scss
+++ b/static/_app.scss
@@ -37,6 +37,16 @@ ul.errorlist {
     }
 }
 
+.carousel-caption {
+	background-color: rgb(76 75 75 / 60%);
+	bottom: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	right: 0;
+	left: 0;
+	width: 100%;
+}
+
 .spacer {
 	display: block;
 	width: 100%;
