--- a/static/app.css
+++ b/static/app.css
@@ -33,6 +33,16 @@ ul.errorlist li {
   border-color: #096890;
 }
 
+.carousel-caption {
+  background-color: rgba(76, 75, 75, 0.6);
+  bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  right: 0;
+  left: 0;
+  width: 100%;
+}
+
 .spacer {
   display: block;
   width: 100%;
